<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ic_home"
        android:title="@string/main_screen_name"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/ic_convert"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="@string/converter_screen_name" />
    <item
        android:id="@+id/ic_settings"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share_screen_name" />

</menu>