...
        app:iconifiedByDefault="false"
        app:layout_constraintTop_toBottomOf="@+id/listAllCurrencies"
        app:queryHint="Введите название страны или валюты..." />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerAllCurrencies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:itemCount="3"
        tools:listitem="@layout/list_item_converter">

...
