...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/buttonBackMain"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="?attr/colorPrimary" />

...
            android:layout_height="wrap_content"
            android:text="@string/heading_for_second_tab_favourites" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerFavouritesScreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tabForFavourites"
        app:layout_constraintStart_toStartOf="@id/tabForFavourites"
...
