<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rate.presentation.favourite.allcurrency.AllCurrenciesFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerListCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        tools:itemCount="3"
        tools:listitem="@layout/list_item_favorite" />


</androidx.constraintlayout.widget.ConstraintLayout>