<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewForShareItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnPrimary">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameCountryForFavorite"
            style="@style/TextAppearance.MyApp.Headline1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="12dp"
            app:layout_constraintEnd_toStartOf="@id/favoriteImageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry"
            tools:text="Russia" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/favoriteImageButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:foregroundGravity="center"
            android:src="@drawable/ic_baseline_star_border_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
